# VoxCPM

./: .gitignore  README.md  app.py  infer.sh  lora_ft_webui.py  quick_test.py  run_app.sh  test_api.py  test_mps_optimization.py  train.sh  train_clone.sh
docs/: quickstart.md
rust/minimal_onnx_test/: Cargo.toml
rust/minimal_onnx_test/src/: main.rs
rust/voxcpm-onnx-test/: Cargo.toml
rust/voxcpm-onnx-test/src/: main.rs
scripts/: export_onnx.py  install_dependencies.sh  train_voxcpm_finetune.py
src/voxcpm/: core.py
src/voxcpm/model/: utils.py  voxcpm.py
src/voxcpm/modules/locdit/: unified_cfm.py
src/voxcpm/onnx/: __init__.py
src/voxcpm/onnx/export/: __init__.py  export_audio_vae_decoder.py  export_audio_vae_encoder.py  export_voxcpm_decode.py  export_voxcpm_prefill.py
src/voxcpm/onnx/voxcpm/: __init__.py
src/voxcpm/onnx/voxcpm/model/: VoxCPM_Deocde.py  VoxCPM_Prefill.py  __init__.py
src/voxcpm/onnx/voxcpm/modules/: __init__.py
src/voxcpm/training/: accelerator.py
